added discovery server

--- a/hotel-services-demo/src/main/resources/application.properties
+++ b/hotel-services-demo/src/main/resources/application.properties
@@ -1,2 +1,4 @@
-spring.application.name=hotel-services-demo
+spring.application.name=hotel-services
 server.port=8090
+
+eureka.client.service-url.defaultZone=http://localhost:8094/eureka
