week3: added mqtt and connecting to db

--- a/rating-services/src/main/resources/application.properties
+++ b/rating-services/src/main/resources/application.properties
@@ -1,3 +1,10 @@
 spring.application.name=rating-services
 server.port=8092
 eureka.client.service-url.defaultZone=http://localhost:8094/eureka
+mqtt.uri=tcp://localhost:1883
+mqtt.username=admin
+mqtt.password=12345678
+
+
+spring.data.mongodb.uri=mongodb://localhost:27017
+spring.data.mongodb.database=rating-service
