--- a/hotel-services-demo/src/main/resources/application.properties
+++ b/hotel-services-demo/src/main/resources/application.properties
@@ -2,3 +2,19 @@ spring.application.name=hotel-services
 server.port=8090
 
 eureka.client.service-url.defaultZone=http://localhost:8094/eureka
+mqtt.uri=tcp://localhost:1883
+mqtt.username=admin
+mqtt.password=12345678
+#logging.level.org.springframework.integration=DEBUG
+#logging.level.org.springframework.web: TRACE
+
+springdoc.swagger-ui.path=/swagger-ui.html
+
+
+
+spring.datasource.url=jdbc:mysql://localhost:3306/hotel-service
+spring.datasource.username=root
+spring.datasource.password=
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
