--- a/user-services/src/main/resources/application.properties
+++ b/user-services/src/main/resources/application.properties
@@ -1,3 +1,15 @@
 spring.application.name=user-services
 server.port=8091
 eureka.client.service-url.defaultZone=http://localhost:8094/eureka
+
+mqtt.uri=tcp://localhost:1883
+mqtt.username=admin
+mqtt.password=12345678
+
+
+spring.datasource.url=jdbc:mysql://localhost:3306/user-service
+spring.datasource.username=root
+spring.datasource.password=
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
