--- a/hotel-api-gateway/src/main/resources/application.properties
+++ b/hotel-api-gateway/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.application.name=hotel-api-gateway
 server.port=8095
-eureka.client.service-url.defaultZone=http://localhost:8094/eureka
+eureka.client.service-url.defaultZone=http://${EUREKA_SERVER:localhost}:8094/eureka
 logging.level.root=INFO
 logging.level.org.springframework.cloud.gateway.route.RouteDefinationLocator=INFO
 logging.level.org.springframework.cloud.gateway=TRACE
