week:4 added docker files and docker compose

--- a/rating-services/src/main/resources/application.properties
+++ b/rating-services/src/main/resources/application.properties
@@ -1,10 +1,16 @@
 spring.application.name=rating-services
 server.port=8092
-eureka.client.service-url.defaultZone=http://localhost:8094/eureka
-mqtt.uri=tcp://localhost:1883
+eureka.client.service-url.defaultZone=http://${EUREKA_HOST:localhost}:8094/eureka
+mqtt.uri=tcp://${MQTT_HOST:localhost}:1883
 mqtt.username=admin
 mqtt.password=12345678
 
+validate.data=${USER_DATA_VALIDATION:false}
 
-spring.data.mongodb.uri=mongodb://localhost:27017
+#spring.data.mongodb.host=${MONGO_DB_HOST:localhost}
+#spring.data.mongodb.port=${MONGO_DB_PORT:27017}
+#spring.data.mongodb.database=rating-service
+#spring.data.mongodb.username=${MONGO_DB_USERNAME:root}
+#spring.data.mongodb.password=${MONGO_DB_PASSWORD}
+spring.data.mongodb.uri=mongodb://${MONGO_DB_USERNAME:root}:${MONGO_DB_PASSWORD:password}@${MONGO_DB_HOST:localhost}:27017
 spring.data.mongodb.database=rating-service
