--- a/hotel-services-demo/src/main/resources/application.properties
+++ b/hotel-services-demo/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 spring.application.name=hotel-services
 server.port=8090
 
-eureka.client.service-url.defaultZone=http://localhost:8094/eureka
-mqtt.uri=tcp://localhost:1883
+eureka.client.service-url.defaultZone=http://${EUREKA_HOST:localhost}:8094/eureka
+mqtt.uri=tcp://${MQTT_HOST:localhost}:1883
 mqtt.username=admin
 mqtt.password=12345678
 #logging.level.org.springframework.integration=DEBUG
@@ -12,9 +12,9 @@ springdoc.swagger-ui.path=/swagger-ui.html
 
 
 
-spring.datasource.url=jdbc:mysql://localhost:3306/hotel-service
-spring.datasource.username=root
-spring.datasource.password=
+spring.datasource.url=jdbc:mysql://${MY_SQL_DB_HOST:localhost}:3306/hotel-service
+spring.datasource.username=${MY_SQL_DB_USERNAME:root}
+spring.datasource.password=${MY_SQL_DB_PASSWORD}
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
