week5: revamped fetch user and hotel from rating service and added prometheus in rating service

--- a/rating-services/src/main/resources/application.properties
+++ b/rating-services/src/main/resources/application.properties
@@ -14,3 +14,6 @@ validate.data=${USER_DATA_VALIDATION:false}
 #spring.data.mongodb.password=${MONGO_DB_PASSWORD}
 spring.data.mongodb.uri=mongodb://${MONGO_DB_USERNAME:root}:${MONGO_DB_PASSWORD:password}@${MONGO_DB_HOST:localhost}:27017
 spring.data.mongodb.database=rating-service
+
+management.endpoints.web.exposure.include=prometheus,health
+management.endpoint.health.show-details=always
