--- a/user-services/src/main/resources/application.properties
+++ b/user-services/src/main/resources/application.properties
@@ -9,7 +9,7 @@ mqtt.password=12345678
 
 spring.datasource.url=jdbc:mysql://${MY_SQL_DB_HOST:localhost}:3306/user-service
 spring.datasource.username=${MY_SQL_DB_USERNAME:root}
-spring.datasource.password=${MY_SQL_DB_PASSWORD}
+spring.datasource.password=${MY_SQL_DB_PASSWORD:example}
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
