updated docker config

--- a/rating-services/Dockerfile
+++ b/rating-services/Dockerfile
@@ -1,3 +1,3 @@
-FROM openjdk:17-jdk-alpine
+FROM eclipse-temurin:17-jdk-alpine
 COPY target/*.jar rating-service-1.0.0.jar
 ENTRYPOINT ["java","-jar","/rating-service-1.0.0.jar"]
