--- a/docker-compose/db-docker-compose.yml
+++ b/docker-compose/db-docker-compose.yml
@@ -2,32 +2,27 @@ services:
   mongodb:
     image: mongo
     ports:
-      - 27017:27017
+      - "27017:27017"
     environment:
       MONGO_INITDB_ROOT_USERNAME: root
       MONGO_INITDB_ROOT_PASSWORD: password
+    volumes:
+      - ./data/mongo-data:/data/db
     networks:
       - ms-network
-  mongo-express:
-    image: mongo-express
-    ports:
-      - 8081:8081
-    environment:
-      ME_CONFIG_MONGODB_ADMINUSERNAME: root
-      ME_CONFIG_MONGODB_ADMINPASSWORD: password
-      ME_CONFIG_MONGODB_SERVER: mongodb
-    depends_on:
-      - mongodb
-    networks:
-      - ms-network
+
   mysqldb:
-    image: mysql
+    image: mysql:8.0
     ports:
-      - 3306:3306
+      - "3306:3306"
     environment:
       MYSQL_ROOT_PASSWORD: example
+    command: --default-authentication-plugin=mysql_native_password
+    volumes:
+      - ./data/mysql-data:/var/lib/mysql
     networks:
       - ms-network
+
 networks:
   ms-network:
     driver: bridge
