--- a/hotel-services-demo/src/main/resources/application.properties
+++ b/hotel-services-demo/src/main/resources/application.properties
@@ -14,7 +14,7 @@ springdoc.swagger-ui.path=/swagger-ui.html
 
 spring.datasource.url=jdbc:mysql://${MY_SQL_DB_HOST:localhost}:3306/hotel-service
 spring.datasource.username=${MY_SQL_DB_USERNAME:root}
-spring.datasource.password=${MY_SQL_DB_PASSWORD:example}
+spring.datasource.password=${MY_SQL_DB_PASSWORD:your_strong_password}
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
