--- a/rating-services/src/main/resources/application.properties
+++ b/rating-services/src/main/resources/application.properties
@@ -12,8 +12,17 @@ validate.data=${USER_DATA_VALIDATION:false}
 #spring.data.mongodb.database=rating-service
 #spring.data.mongodb.username=${MONGO_DB_USERNAME:root}
 #spring.data.mongodb.password=${MONGO_DB_PASSWORD}
-spring.data.mongodb.uri=mongodb://${MONGO_DB_USERNAME:root}:${MONGO_DB_PASSWORD:password}@${MONGO_DB_HOST:localhost}:27017
+spring.data.mongodb.uri=mongodb://${MONGO_DB_USERNAME:root}:${MONGO_DB_PASSWORD:your_strong_password}@${MONGO_DB_HOST:localhost}:27017
 spring.data.mongodb.database=rating-service
 
 management.endpoints.web.exposure.include=prometheus,health
 management.endpoint.health.show-details=always
+
+
+resilience4j.circuitbreaker.instances.userService.slidingWindowSize=2
+resilience4j.circuitbreaker.instances.userService.failureRateThreshold=50
+resilience4j.circuitbreaker.instances.userService.waitDurationInOpenState=30s
+
+resilience4j.circuitbreaker.instances.hotelService.slidingWindowSize=2
+resilience4j.circuitbreaker.instances.hotelService.failureRateThreshold=60
+resilience4j.circuitbreaker.instances.hotelService.waitDurationInOpenState=20s
