--- a/sevice-discovery/Dockerfile
+++ b/sevice-discovery/Dockerfile
@@ -1,3 +1,3 @@
-FROM openjdk:17-jdk-alpine
+FROM eclipse-temurin:17-jdk-alpine
 COPY target/*.jar hotel-service-discovery-1.0.0.jar
 ENTRYPOINT ["java","-jar","/hotel-service-discovery-1.0.0.jar"]
